--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nuka Cola</title>
-    <link rel="stylesheet" href="NukaCola.css">
+    <link rel="stylesheet" href="Style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="NukaCola.html"><img src="Enjoy-Nuka-Cola.jpg"></a>
+            <a href="Index.html"><img src="Enjoy-Nuka-Cola.jpg"></a>
             <div class="nav-links">
             <ul>
                 <li><a href="">HOME</a></li>
