--- a/Test.html
+++ b/Test.html
@@ -12,7 +12,7 @@
 <body>
     <section class="header">
         <nav>
-            <a href="Index.html"><img src="Enjoy-Nuka-Cola.jpg"></a>
+            <a href="Test.html"><img src="Enjoy-Nuka-Cola.jpg"></a>
             <div class="nav-links">
             <ul>
                 <li><a href="">HOME</a></li>
