--- a/Test.html
+++ b/Test.html
@@ -8,12 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.4.2/css/fontawesome.min.css">
 </head>
 <body>
     <section class="header">
         <nav>
             <a href="Test.html"><img src="Enjoy-Nuka-Cola.jpg"></a>
             <div class="nav-links">
+                <i class="fa fa-times"></i>
             <ul>
                 <li><a href="">HOME</a></li>
                 <li><a href="">SOBRE</a></li>
@@ -22,6 +24,7 @@
                 <li><a href="">SUPORTE</a></li>
             </ul>
         </div>
+        <i class="fa fa-bars"></i>
         </nav>
 
 <div class="text-box">
